nohup.out
  File "utils/extract_pdbbind_pockets.py", line 27
    data_path = os.path.join(raw_path, f'refined-set')
                                                    ^
SyntaxError: invalid syntax
